// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lane C golden — the phone (390 × 844 iOS) (a) /contract for the fixture job (no invitee email on file) 1`] = `
{
  "lines": 932,
  "sha256": "4eaf627b2db83f4d13d533eb472421ce6612390d3425b12390141d6c6d142247",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (b) /change-order, a new CO on the fixture job 1`] = `
{
  "lines": 1025,
  "sha256": "3e04bb5aa243ec2ca4e72cc25404f333ad15f4f7f13399c5be820a0530807559",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (c) /estimate-wizard for a job that already has an estimate 1`] = `
{
  "lines": 434,
  "sha256": "167bbe2eb7cc435415137283df5e25ca797eda4fb382446c180f28f5ac70430a",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (d) /smart-proposal for the fixture job 1`] = `
{
  "lines": 626,
  "sha256": "3e207df48c169fd71254215b9e2c81ba6300f63a76b1968e4ff9c27eefa60e02",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (e) /quick-quote 1`] = `
{
  "lines": 435,
  "sha256": "bb93d3e6333577d9e21d73e7f43156d6ca184785e8d92175a06c8f45e7af0d57",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (f) /invoice, an overdue sent invoice 1`] = `
{
  "lines": 993,
  "sha256": "21e67a3c70f53b92b23436a3b4b2636e44f193de6d4690920d88b51e1087c3e8",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (g) /invoice, a paid invoice 1`] = `
{
  "lines": 928,
  "sha256": "bdc7623a497e872df7478a97b6da48f7073e282d0a887331fbf2cd28b0af3d21",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (h) /invoice, a new invoice on the fixture job 1`] = `
{
  "lines": 1025,
  "sha256": "2f7dbcfa3170190ad85ca029d88758e97e13655efe650a6569946cf115fd7282",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (i) /payments with two overdue invoices 1`] = `
{
  "lines": 493,
  "sha256": "8fb883c755ba6d47a52ba3814e5245c481dc8ff9c9cc03bc9501e905ba9f6fc2",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (j) /lien-waivers for the fixture job 1`] = `
{
  "lines": 471,
  "sha256": "19fd44e6ca6d9328427f08f9fd3500b100c54427dfce6633ef77186db9aa49f4",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (k) /sub-portal-setup for a sub on the fixture job 1`] = `
{
  "lines": 490,
  "sha256": "acc9b30f8d8aaa768c576341d02f9e8c170442b4561cc3fccc5e9cabbf0e856c",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (l) /takeoff-estimate for the fixture job 1`] = `
{
  "lines": 347,
  "sha256": "efbefc2fc356159e809784281af4e2dc6b9a7d179239997cb03573e39459eecd",
}
`;
